--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
- <html>
+ <html lang="en" >
   <head>
-     <title>
-        YouTube-Clone
-      </title>
+   <title>
+      YouTube-Clone
+    </title>
+   <meta charset="utf-8" >
+   <meta name="viewport" content="width=device-width,initial-scale=1">
+   <meta name="description" content="High-quality software engineering and interviewing lessons | Become a software engineer or advance in your current career.">
+   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date());gtag('config','G-SS317NHH68');</script>
       <link rel="stylesheet" href="styles/general.css">
       <link rel="stylesheet" href="styles/header.css">
       <link rel="stylesheet" href="styles/video.css">
